--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -1,32 +1,30 @@
 <div class="container-fluid">
   	<div class="row">
-	    <div class="col-md-2">
+	      <!--Body content-->
+		<ul class="books">
+			<li ng-repeat="book in books | filter:query | orderBy:orderProp"
+				class="thumbnail book-listing">
+				<a class="img" href="#/books/{{book.id}}">
+					<img ng-src="{{book.image}}" title="{{book.title + '的封面图'}}">
+				</a>
+				<a class="title" href="#/books/{{book.id}}">
+					{{book.title}}
+				</a>
+
+				<p class="author">作者：{{book.author.join('，')}}</p>
+				<p class="rating">评分：{{book.rating}}</p>
+			</li>
+		  </li>
+		</ul>
+	</div>
+	<div class="row">
 		    <!--Sidebar content-->
-		    <input ng-model="query" placeholder="search here...">
-		    <p>排序方式:</p>
+		    <input ng-model="query" class="form-control query" placeholder="search here...">
+		    <!--<p>排序方式:</p>
 			<select ng-model="orderProp">
 			  <option value="title">书名</option>
 			  <option value="rating">评分</option>
-			</select>
+			</select>-->
 
-	    </div>
-	    <div class="col-md-10">
-	      <!--Body content-->
-			<p>总共找到了<span class="number">{{books.length}}</span>本书：</p>
-			<ul class="books">
-				<li ng-repeat="book in books | filter:query | orderBy:orderProp"
-					class="thumbnail book-listing">
-					<a href="#/books/{{book.id}}">
-						<img ng-src="{{book.image}}" title="{{book.title + '的封面图'}}">
-					</a>
-					<a href="#/books/{{book.id}}">
-						<span>{{book.title}}</span>
-					</a>
-
-					<p>{{book.summary}}</p>
-				</li>
-			  </li>
-			</ul>
-		</div>
-		</div>
+	</div>
 </div>
