--- a/app/css/app.css
+++ b/app/css/app.css
@@ -90,7 +90,7 @@ body, html {
 }
 .detail .row {
     width: 80%;
-    margin: 20px 0;
+    margin: 60px 0;
 }
 .detail .row>img {
     width: 25%;
@@ -106,6 +106,8 @@ body, html {
 }
 .minifo {
     color: #999;
+    text-align: right;
+    margin-bottom: 2em;
 }
 .tags {
     color: skyblue;
@@ -114,9 +116,18 @@ body, html {
     content: ",";
 }
 .tags:last-child:after {
-    content: " ";
+    content: "";
+    display: inline-block;
+    position: absolute;
 }
 .bookinfo p strong {
     font-size: 22px;
     color: teal;
+}
+.close {
+    position: fixed;
+    top: 40px;
+    right: 40px;
+    font-size: 48px;
+    font-weight: normal;
 }
