--- a/app/css/app.css
+++ b/app/css/app.css
@@ -6,6 +6,9 @@ body, html {
     padding:15px;
     text-align:center;
 }
+.container-fluid.list {
+
+}
 .books {
     padding:20px;
 }
@@ -107,7 +110,14 @@ body, html {
 .minifo {
     color: #999;
     text-align: right;
-    margin-bottom: 2em;
+    padding-bottom: 2em;
+    margin-bottom: 0;
+    background: url(../images/rabbit2.gif) no-repeat bottom left;
+}
+.summary, .authorinfo, .taglist {
+    border-top: 1px solid #000;
+    padding: 20px 0 10px;
+    margin: 0 0 10px;
 }
 .tags {
     color: skyblue;
