--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid list">
   	<div class="row">
 	      <!--Body content-->
 		<ul class="books">
