--- a/app/css/app.css
+++ b/app/css/app.css
@@ -9,13 +9,16 @@ body, html {
 .container-fluid.list {
 
 }
+a:hover {
+    text-decoration: none;
+}
 .books {
     padding:20px;
 }
 .book-listing {
     width: 9%;
     display: inline-block;
-    padding: 20px;
+    padding: 10px 20px;
     margin: 1px 1% 0;
     border-radius: 0;
     font-size: 10px;
@@ -23,7 +26,7 @@ body, html {
     border-left: 0;
     border-right:0;
     border-top: 0;
-    border-bottom: 2px solid #000;
+    border-bottom: 1px solid #000;
     transition: all .1s linear;
     -webkit-transition: all .1s linear;
     -moz-transition: all .1s linear;
@@ -67,23 +70,23 @@ body, html {
     color: #aaa;
 }
 .book-listing .img img {
-    filter: grayscale(1);
-    -webkit-filter: grayscale(1);
-    -moz-filter: grayscale(1);
-    -o-filter: grayscale(1);
-    -ms-filter: grayscale(1);
+    filter: sepia(.8);
+    -webkit-filter: sepia(.8);
+    -moz-filter: sepia(.8);
+    -o-filter: sepia(.8);
+    -ms-filter: sepia(.8);
     transition: all .1s linear;
     -webkit-transition: all .1s linear;
     -moz-transition: all .1s linear;
     -o-transition: all .1s linear;
     -ms-transition: all .1s linear;
 }
-.book-listing .img img:hover {
-    filter: sepia(.5);
-    -webkit-filter: sepia(.5);
-    -moz-filter: sepia(.5);
-    -o-filter: sepia(.5);
-    -ms-filter: sepia(.5);
+.book-listing:hover img {
+    filter: sepia(0);
+    -webkit-filter: sepia(0);
+    -moz-filter: sepia(0);
+    -o-filter: sepia(0);
+    -ms-filter: sepia(0);
 }
 .query {
     width: 30%;
