--- a/app/partials/book-detail.html
+++ b/app/partials/book-detail.html
@@ -24,11 +24,14 @@
 				</p>
 			</div>
 			<p class="taglist">标签：
-				<span ng-repeat="tag in book.tags" class="tags">
+				<span ng-if="book.tags.length > 0" ng-repeat="tag in book.tags" class="tags">
 					{{tag.name}}
+				</span>
+				<span ng-if="book.tags.length == 0" ng-repeat="tag in book.tags" class="tags">
+					无
 				</span>
 			</p>
 		</div>
 	</div>
-	<a class="close" href="javascript: history.back();">&times;</a>
+	<a class="close" href="../">&times;</a>
 </div>
