--- a/app/css/app.css
+++ b/app/css/app.css
@@ -128,10 +128,31 @@ a:hover {
     margin-bottom: 0;
     background: url(../images/rabbit2.gif) no-repeat bottom left;
 }
+.bookinfo .not-found {
+    font-size: 16px;
+}
+.bookinfo .not-found strong{
+    font-size: 48px;
+    line-height:3em;
+    margin-right: 10px;
+}
+.not-found+.minifo {
+    height: 200px;
+    background: url(../images/404.png) no-repeat center bottom;
+    background-size: auto 100%;
+    border-bottom: 1px solid #000
+}
 .summary, .authorinfo, .taglist {
     border-top: 1px solid #000;
     padding: 20px 0 10px;
     margin: 0 0 10px;
+}
+.summary strong, .authorinfo strong {
+    display: block;
+    margin: 10px 0;
+    font-size: 14px;
+    font-weight: normal;
+    color: tan;
 }
 .tags {
     color: skyblue;
