--- a/app/css/app.css
+++ b/app/css/app.css
@@ -9,6 +9,9 @@ body, html {
 .container-fluid.list {
 
 }
+a {
+    color: #000;
+}
 a:hover {
     text-decoration: none;
 }
@@ -26,7 +29,7 @@ a:hover {
     border-left: 0;
     border-right:0;
     border-top: 0;
-    border-bottom: 1px solid #000;
+    border-bottom: 2px solid #000;
     transition: all .1s linear;
     -webkit-transition: all .1s linear;
     -moz-transition: all .1s linear;
@@ -66,8 +69,10 @@ a:hover {
     overflow: hidden;
     margin: 5px 0;
 }
-.book-listing .rating {
-    color: #aaa;
+.book-listing .rating span, .book-listing .author span{
+    color: brown;
+    font-style: italic;
+    font-family: monospace;
 }
 .book-listing .img img {
     filter: sepia(.8);
@@ -122,37 +127,59 @@ a:hover {
     line-height: 2em;
 }
 .minifo {
-    color: #999;
+    color: #666;
     text-align: right;
-    padding-bottom: 2em;
+    padding: 0 0 2em;
     margin-bottom: 0;
+    font-size: 10px;
     background: url(../images/rabbit2.gif) no-repeat bottom left;
 }
-.bookinfo .not-found {
-    font-size: 16px;
+.minifo p {
+    margin: 0;
+    font-style: italic;
 }
 .bookinfo .not-found strong{
     font-size: 48px;
     line-height:3em;
-    margin-right: 10px;
+    margin-right:10px;
 }
 .not-found+.minifo {
-    height: 200px;
-    background: url(../images/404.png) no-repeat center bottom;
-    background-size: auto 100%;
-    border-bottom: 1px solid #000
+    height: 100px;
+    border-bottom: 2px solid #000
 }
 .summary, .authorinfo, .taglist {
-    border-top: 1px solid #000;
+    border-top: 2px solid #000;
     padding: 20px 0 10px;
     margin: 0 0 10px;
+}
+.summary p, .authorinfo p {
+    padding: 0 2em;
 }
 .summary strong, .authorinfo strong {
     display: block;
     margin: 10px 0;
+    text-indent: 24px;
     font-size: 14px;
     font-weight: normal;
     color: tan;
+    position: relative;
+}
+.summary strong:before, .authorinfo strong:before, .summary strong:after, .authorinfo strong:after {
+    content: "";
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    position: absolute;
+}
+.summary strong:before, .authorinfo strong:before {
+    background: #EBD203;
+    left: -2px;
+    top: 4px;
+}
+.summary strong:after, .authorinfo strong:after {
+    background: #F0717C;
+    left: -9px;
+    top: 0;
 }
 .tags {
     color: skyblue;
