--- a/app/partials/book-detail.html
+++ b/app/partials/book-detail.html
@@ -3,7 +3,7 @@
 		<img ng-src="{{book.images.large}}">
 		<div class="bookinfo">
 			<p ng-if="book.notFound === false"><strong>{{book.title}}</strong></p>
-			<p class="not-found" ng-if="book.notFound === true"><strong>404</strong>找不到资源...o.0</p>
+			<p class="not-found" ng-if="book.notFound === true"><strong>404</strong>找不到资源了...良辰念书少，客官别逗...O__O</p>
 
 			<div class="minifo">
 				<p ng-if="book.author.length > 0">作者：{{book.author.join('，')}}</p>
