--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,19 +1,43 @@
 body, html {
     min-height: 100%;
-    font-family: "Lantinghei SC", "STHeiti", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑",  "WenQuanYi Micro Hei", SimSun, sans-serif
+    font-family: "Lantinghei SC", "STHeiti", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑",  "WenQuanYi Micro Hei", SimSun, sans-serif;
+    background: url(../images/bg.jpg) no-repeat right top;
+    background-size: 50% auto;
 }
 .container-fluid {
-    padding:15px;
+    padding: 15px 15px 250px;
     text-align:center;
+    background: rgba(255,255,255,.8)
 }
 .container-fluid.list {
-
 }
 a {
     color: #000;
 }
 a:hover {
     text-decoration: none;
+}
+h1 {
+    margin: 1em 1em;
+    font-weight: normal;
+    display: inline-block;
+    float: right;
+    border-bottom: 3px solid #E1661F;
+    color: rgba(155,195,195,1);
+}
+h1 span {
+    color: #E1661F;
+    display: inline-block;
+    position: relative;
+}
+h1 span:after {
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 100%;
+    height:0;
+    border-bottom: 3px solid rgba(155,195,195,1);;
 }
 .books {
     padding:20px;
@@ -32,6 +56,7 @@ a:hover {
     border-bottom: 2px solid #000;
     transition: all .1s linear;
     -webkit-transition: all .1s linear;
+    background: rgba(255,255,255,.6);
     -moz-transition: all .1s linear;
     -o-transition: all .1s linear;
     -ms-transition: all .1s linear;
@@ -61,6 +86,7 @@ a:hover {
 .book-listing:hover {
     transform: scale(1.1);
     z-index: 10;
+    background: rgba(255,255,255,1)
 }
 .book-listing .title, .book-listing .author, .book-listing .rating {
     display: block;
@@ -93,22 +119,42 @@ a:hover {
     -o-filter: sepia(0);
     -ms-filter: sepia(0);
 }
+.tools {
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+    background: rgba(155,195,195,.9);
+    box-shadow: 0 -1px 1px #;
+    z-index: 11;
+}
 .query {
     width: 30%;
     margin: auto;
-    position: fixed;
-    bottom: 30px;
+    position: relative;
+    top: 34px;
     left: 50%;
     margin-left: -15%;
     background: aliceblue;
     color: #9B7A49;
     border: 0;
 }
-
+.copyright {
+    position: absolute;
+    bottom: 130px;
+    left: 30px;
+    font-family: sans-serif;
+    font-style: italic;
+    color: tomato;
+}
+.copyright a {
+    color: rgba(155,195,195,1);
+}
 /**.details.html**/
 .container-fluid.detail {
     padding-left: 0;
     text-align: left;
+    padding-bottom: 15px;
 }
 .detail .row {
     width: 80%;
@@ -197,6 +243,8 @@ a:hover {
 .bookinfo p strong {
     font-size: 22px;
     color: teal;
+    font-family: fantasy;
+    font-weight: normal;
 }
 .close {
     position: fixed;
