--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -1,6 +1,6 @@
 <div class="container-fluid list">
   	<div class="row">
-  		<h1>我家的<span>书柜</span></h1>
+  		<h1>我家的<span>书们</span></h1>
 	      <!--Body content-->
 		<ul class="books">
 			<li ng-repeat="book in books | filter:query | orderBy:orderProp"
