--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -12,7 +12,7 @@
 					《{{book.title}}》
 				</a>
 				<p class="author"><span>By </span>{{book.author.join('，')}}</p>
-				<p class="rating">评分：<span>{{book.rating}}</span></p>
+				<p class="rating"><span>{{book.publisher}}</span></p>
 			</li>
 		  </li>
 		</ul>
