add total statistics

--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -26,6 +26,6 @@
 			  <option value="title">书名</option>
 			  <option value="rating">评分</option>
 			</select>-->
-
+			<p class="" style="text-align:right">合计：{{totalPages}}页，{{totalPrice}}元。</p>
 	</div>
 </div>
