--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -16,7 +16,7 @@
 			</li>
 		  </li>
 		</ul>
-		<p class="copyright">Designed by <a href="mailto">IN設計.</a></p>
+		<p class="copyright">Designed by <a href="mailto:hancong9104@163.com">IN設計</a>, with total pages {{totalPages}}, cost ¥{{totalPrice}}.</p></p>
 	</div>
 	<div class="row tools">
 		    <!--Sidebar content-->
@@ -26,6 +26,5 @@
 			  <option value="title">书名</option>
 			  <option value="rating">评分</option>
 			</select>-->
-			<p class="" style="text-align:right">合计：{{totalPages}}页，{{totalPrice}}元。</p>
 	</div>
 </div>
