--- a/app/css/app.css
+++ b/app/css/app.css
@@ -183,6 +183,7 @@ h1 span:after {
     padding: 0 0 2em;
     margin-bottom: 0;
     font-size: 10px;
+    height: 164px;
     background: url(../images/rabbit2.gif) no-repeat bottom left;
 }
 .minifo p {
