--- a/app/css/app.css
+++ b/app/css/app.css
@@ -5,8 +5,9 @@ body, html {
     background-size: 50% auto;
 }
 .container-fluid {
-    padding: 15px 15px 250px;
-    text-align:center;
+    padding: 15px 105px 250px 15px;
+    /*text-align:center;*/
+    text-align: left;
     background: rgba(255,255,255,.8)
 }
 .container-fluid.list {
@@ -46,7 +47,7 @@ h1 span:after {
     width: 9%;
     display: inline-block;
     padding: 10px 20px;
-    margin: 1px 1% 0;
+    margin: 10px 2% 0;
     border-radius: 0;
     font-size: 10px;
     position:relative;
@@ -84,7 +85,10 @@ h1 span:after {
 }
 
 .book-listing:hover {
-    transform: scale(1.3);
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
     z-index: 10;
     background: #FFFFDD;
 }
@@ -101,11 +105,11 @@ h1 span:after {
     font-family: monospace;
 }
 .book-listing .img img {
-    filter: sepia(.8);
-    -webkit-filter: sepia(.8);
-    -moz-filter: sepia(.8);
-    -o-filter: sepia(.8);
-    -ms-filter: sepia(.8);
+    filter: sepia(.4);
+    -webkit-filter: sepia(.4);
+    -moz-filter: sepia(.4);
+    -o-filter: sepia(.4);
+    -ms-filter: sepia(.4);
     transition: all .1s linear;
     -webkit-transition: all .1s linear;
     -moz-transition: all .1s linear;
