--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -16,7 +16,7 @@
 			</li>
 		  </li>
 		</ul>
-		<p class="copyright">Designed by <a href="mailto:hancong9104@163.com">IN設計</a>, with {{books.length}} books, totally {{totalPages}} pages, cost ¥{{totalPrice}}.</p></p>
+		<p class="copyright">Designed by <a href="mailto:hancong9104@163.com">IN設計</a>, {{books.length}} books contained, totally {{totalPages}} pages, cost ¥{{totalPrice}}.</p></p>
 	</div>
 	<div class="row tools">
 		    <!--Sidebar content-->
