--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -3,7 +3,7 @@
   		<h1>我家的<span>书们</span></h1>
 	      <!--Body content-->
 		<ul class="books">
-			<li ng-repeat="book in books | filter:query | orderBy:orderProp"
+			<li ng-repeat="book in books | filter:querybook | orderBy:orderFunc"
 				class="thumbnail book-listing" title="{{book.title}}">
 				<a class="img" href="#/books/{{book.id}}">
 					<img ng-src="{{book.image}}" title="{{book.title + '的封面图'}}">
@@ -20,11 +20,6 @@
 	</div>
 	<div class="row tools">
 		    <!--Sidebar content-->
-		    <input ng-model="query" class="form-control query" placeholder="search here...">
-		    <!--<p>排序方式:</p>
-			<select ng-model="orderProp">
-			  <option value="title">书名</option>
-			  <option value="rating">评分</option>
-			</select>-->
+		    <input ng-model="querybook" class="form-control query" placeholder="search here...">
 	</div>
 </div>
