--- a/app/css/app.css
+++ b/app/css/app.css
@@ -159,6 +159,9 @@ h1 span:after {
     text-align: left;
     padding-bottom: 15px;
 }
+#bookdetails {
+    
+}
 .detail .row {
     width: 80%;
     margin: 60px 0;
