--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -1,25 +1,27 @@
 <div class="container-fluid list">
-  	<div class="row">
-  		<h1>我家的<span>书们</span></h1>
-	      <!--Body content-->
-		<ul class="books">
-			<li ng-repeat="book in books | filter:querybook | orderBy:orderFunc"
-				class="thumbnail book-listing" title="{{book.title}}">
-				<a class="img" href="#/books/{{book.id}}">
-					<img ng-src="{{book.image}}" title="{{book.title + '的封面图'}}">
-				</a>
-				<a class="title" href="#/books/{{book.id}}">
-					《{{book.title}}》
-				</a>
-				<p class="author"><span>By </span>{{book.author.join('，')}}</p>
-				<p class="rating"><span>{{book.publisher}}</span></p>
-			</li>
-		  </li>
-		</ul>
-		<p class="copyright">Designed by <a href="mailto:hancong9104@163.com">IN設計</a>, {{books.length}} books contained, totally {{totalPages}} pages, cost ¥{{totalPrice}}.</p></p>
-	</div>
-	<div class="row tools">
-		    <!--Sidebar content-->
-		    <input ng-model="querybook" class="form-control query" placeholder="search here...">
+	<div>
+	  	<div class="row">
+	  		<h1>我家的<span>书们</span></h1>
+		      <!--Body content-->
+			<ul class="books">
+				<li ng-repeat="book in books | filter:querybook | orderBy:orderFunc"
+					class="thumbnail book-listing" title="{{book.title}}">
+					<a class="img" href="#/books/{{book.id}}#bookdetails">
+						<img ng-src="{{book.image}}" title="{{book.title + '的封面图'}}">
+					</a>
+					<a class="title" href="#/books/{{book.id}}">
+						《{{book.title}}》
+					</a>
+					<p class="author"><span>By </span>{{book.author.join('，')}}</p>
+					<p class="rating"><span>{{book.publisher}}</span></p>
+				</li>
+			  </li>
+			</ul>
+			<p class="copyright">Designed by <a href="mailto:hancong9104@163.com">IN設計</a>, {{books.length}} books contained, totally {{totalPages}} pages, cost ¥{{totalPrice}}.</p></p>
+		</div>
+		<div class="row tools">
+			    <!--Sidebar content-->
+			    <input ng-model="querybook" class="form-control query" placeholder="search here...">
+		</div>
 	</div>
 </div>
