--- a/app/css/app.css
+++ b/app/css/app.css
@@ -46,14 +46,15 @@ h1 span:after {
 .book-listing {
     width: 9%;
     display: inline-block;
-    padding: 10px 20px;
-    margin: 10px 2% 0;
+    padding: 0 0 10px 0;
+    margin: 10px 2% 20px;
     border-radius: 0;
-    font-size: 10px;
+    font-size: 9px;
     position:relative;
     border-left: 0;
     border-right:0;
     border-top: 0;
+    text-align: center;
     border-bottom: 2px solid #000;
     transition: all .1s linear;
     -webkit-transition: all .1s linear;
@@ -62,42 +63,21 @@ h1 span:after {
     -o-transition: all .1s linear;
     -ms-transition: all .1s linear;
 }
-.book-listing:nth-child(10n), .book-listing:last-child {
-    border-right: 0;
-}
-.book-listing:nth-child(2n) {
-    top: 15px;
-}
-.book-listing:nth-child(3n) {
-    top: 50px;
-}
-.book-listing:nth-child(7), .book-listing:nth-child(13), .book-listing:nth-child(17) {
-    top: 35px;
-}
-.book-listing:nth-child(5n) {
-    top: -10px;
-}
-.book-listing:nth-child(15n) {
-    top: 70px;
-}
-.book-listing:nth-child(16n) {
-    top: 40px;
-}
 
 .book-listing:hover {
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -o-transform: scale(1.1);
+    transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -o-transform: scale(1.3);
     z-index: 10;
-    background: #FFFFDD;
+    background: rgba(155,195,195,.2);
 }
 .book-listing .title, .book-listing .author, .book-listing .rating {
     display: block;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    margin: 5px 0;
+    margin: 5px;
 }
 .book-listing .rating span, .book-listing .author span{
     color: brown;
@@ -105,6 +85,8 @@ h1 span:after {
     font-family: monospace;
 }
 .book-listing .img img {
+    width: 70%;
+    margin: 10px auto;
     filter: sepia(.4);
     -webkit-filter: sepia(.4);
     -moz-filter: sepia(.4);
@@ -117,11 +99,11 @@ h1 span:after {
     -ms-transition: all .1s linear;
 }
 .book-listing:hover img {
-    filter: sepia(0);
-    -webkit-filter: sepia(0);
-    -moz-filter: sepia(0);
-    -o-filter: sepia(0);
-    -ms-filter: sepia(0);
+    filter: sepia(1);
+    -webkit-filter: sepia(1);
+    -moz-filter: sepia(1);
+    -o-filter: sepia(1);
+    -ms-filter: sepia(1);
 }
 .tools {
     position: fixed;
