--- a/app/partials/book-list.html
+++ b/app/partials/book-list.html
@@ -199,6 +199,6 @@
 				</li>
 			</ul>
 		</div>
-		<p class="copyright">Designed by <a href="mailto:hancong9104@163.com">IN設計</a>, {{books.length}} books contained, totally {{totalPages}} pages, cost ¥{{totalPrice}}.</strong></p></strong></p>
+		<p class="copyright">Designed by <a href="mailto:hancong9104@163.com">IN設計</a>, {{books.length}} books contained.</strong></p></strong></p>
 	</div>
 </div>
